--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 	<head>
 		<meta charset="utf-8">
 		<title>测试</title>
+		
+	</head>
+	<script src="https://unpkg.com/vue@next"></script>
+	<style>
+		.demo {
+			font-family: sans-serif;
+			border: 1px solid #eee;
+			border-radius: 2px;
+			padding: 20px 30px;
+			margin-top: 1em;
+			margin-bottom: 40px;
+			user-select: none;
+			overflow-x: auto;
+		}
+	</style>
+	<body>
 		<h1>Hello World</h1>
 		<p>I'm hosted with GitHub Pages.</p>
-	</head>
-	<body>
+		<div id="hello-vue" class="demo">
+			{{message}}
+		</div>
+		<script>
+			const HelloVueApp = {
+			  data() {
+			    return {
+			      message: 'Hello Vue!!'
+			    }
+			  }
+			}
+			
+			Vue.createApp(HelloVueApp).mount('#hello-vue')
+		</script>
 	</body>
 </html>
